--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
         <div class="flex-item">
 	
 	<p>
+		<a href="https://www.amazon.in/dp/B0BNBSJRPZ/ref=twister_B0BRKNKCH3?_encoding=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=9aa9bf54c63e9aa209134a8ee7298e3f&camp=3638&creative=24630">
+			<img src="imgs/Samsung Galaxy A04e" width="350" height="350">
+			<p id="title">
+				Samsung Galaxy A04e
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
 		<a href="https://www.amazon.in/ADDMAX-Extension-Cord-Port-Multi-Protection/dp/B083M1D7HW/?_encoding=UTF8&amp;pd_rd_w=cvylp&amp;content-id=amzn1.sym.730090a5-d1cb-4d65-a97c-9881819a53f1&amp;pf_rd_p=730090a5-d1cb-4d65-a97c-9881819a53f1&amp;pf_rd_r=1YF56DJCMRD33RQ3ZT22&amp;pd_rd_wg=XkuCG&amp;pd_rd_r=c0a3385e-f673-44b2-86b7-812168f489c6&amp;ref_=pd_gw_ci_mcx_mr_hp_atf_m&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=ead835c579e15eefde23eaefaa319b97&camp=3638&creative=24630">
 			<img src="imgs/ADDMAX Extension Cord_1.jpg" width="350" height="350">
 			<p id="title">
