--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	
 	<p>
 		<a href="https://www.amazon.in/dp/B0BNBSJRPZ/ref=twister_B0BRKNKCH3?_encoding=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=9aa9bf54c63e9aa209134a8ee7298e3f&camp=3638&creative=24630">
-			<img src="imgs/Samsung Galaxy A04e" width="350" height="350">
+			<img src="imgs/Samsung Galaxy A04e.jpg" width="350" height="350">
 			<p id="title">
 				Samsung Galaxy A04e
 			</p>
