--- a/index.html
+++ b/index.html
@@ -20,6 +20,42 @@
         <div class="flex-item">
 	
 	<p>
+		<a href="https://www.amazon.in/gp/product/B0758JGNHL/ref=ppx_yo_dt_b_asin_image_o09_s00?ie=UTF8&amp;th=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=4b47a1d31b6984c4aef7b8769f2c6033&camp=3638&creative=24630">
+			<img src="imgs/Happilo All Natural Unsweetened Peanut Butter Creamy 1Kg.jpg" width="350" height="350">
+			<p id="title">
+				Happilo All Natural Unsweetened Peanut Butter Creamy 1Kg
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/gp/product/B07KT9Q54M/ref=ppx_yo_dt_b_asin_image_o08_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=ccad7f4af3078f372ac8ed08e45201ac&camp=3638&creative=24630">
+			<img src="imgs/Shalimar Premium OXO - Biodegradable Garbage Bags (Medium).jpg" width="350" height="350">
+			<p id="title">
+				Shalimar Premium OXO - Biodegradable Garbage Bags (Medium)
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/gp/product/B09RFDQVJD/ref=ppx_yo_dt_b_asin_image_o04_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=a21c1bd515a7064788198289c56ebee1&camp=3638&creative=24630">
+			<img src="imgs/Nilkamal STL22 Plastic Stool.jpg" width="350" height="350">
+			<p id="title">
+				Nilkamal STL22 Plastic Stool
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
 		<a href="https://www.amazon.in/dp/B0BNBSJRPZ/ref=twister_B0BRKNKCH3?_encoding=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=9aa9bf54c63e9aa209134a8ee7298e3f&camp=3638&creative=24630">
 			<img src="imgs/Samsung Galaxy A04e.jpg" width="350" height="350">
 			<p id="title">
