--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
         <div class="flex-item">
 	
 	<p>
+		<a href="https://www.amazon.in/dp/B0BG1PN3H7?ref_=cm_sw_r_apan_dp_BXZBWWM0CVSPCVCV0D1Y&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=4db7d81e18256f6d1d67651f2350b302&camp=3638&creative=24630">
+			<img src="imgs/realme narzo 50A Prime.jpg" width="350" height="350">
+			<p id="title">
+				realme narzo 50A Prime
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
 		<a href="https://www.amazon.in/gp/product/B0758JGNHL/ref=ppx_yo_dt_b_asin_image_o09_s00?ie=UTF8&amp;th=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=4b47a1d31b6984c4aef7b8769f2c6033&camp=3638&creative=24630">
 			<img src="imgs/Happilo All Natural Unsweetened Peanut Butter Creamy 1Kg.jpg" width="350" height="350">
 			<p id="title">
