--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
         <div class="flex-item">
 	
 	<p>
+		<a href="https://www.amazon.in/gp/search?ie=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=b91f198a46ea124ac3e797adc3b11494&camp=3638&creative=24630&index=eu-ce-in&keywords=camera">
+			<img src="imgs/613qOogqnzL._AC_UY218_.jpg" width="350" height="350">
+			<p id="title">
+				Search for - Secret Camera
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
 		<a href="https://www.amazon.in/dp/B0BG1PN3H7?ref_=cm_sw_r_apan_dp_BXZBWWM0CVSPCVCV0D1Y&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=4db7d81e18256f6d1d67651f2350b302&camp=3638&creative=24630">
 			<img src="imgs/realme narzo 50A Prime.jpg" width="350" height="350">
 			<p id="title">
