--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	
 	<p>
 		<a href="https://www.amazon.in/gp/product/812231354X/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=721acd6530a3a5444a695e39f3f6f59f&camp=3638&creative=24630">
-			<img src="img/51kcA5D1dQL._SX384_BO1,204,203,200_.jpg" width="350" height="350">
+			<img src="imgs/51kcA5D1dQL._SX384_BO1,204,203,200_.jpg" width="350" height="350">
 			<p id="title">
 				Children Knowledge Bank : A Tonic For Your Child's Brain
 			</p>
@@ -35,7 +35,7 @@
 		<a href="https://www.amazon.in/gp/product/B0BDS8MY8J/ref=ppx_yo_dt_b_asin_title_o04_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=bc00c4b91ee86769fe5fdb49c4279835&camp=3638&creative=24630">
 			<img src="imgs/717wlP-z1ZL._SX679_.jpg" width="350" height="350">
 			<p id="title">
-				Lapster Caddy for ssd and HDD, Optical Bay 2nd Hard Drive Caddy, Caddy 9.5mm for Laptop
+				Lapster Caddy for ssd and HDD, Optical Bay 2nd Hard Drive Caddy
 			</p>
 			
 		</a>
@@ -59,7 +59,7 @@
 		<a href="https://www.amazon.in/gp/product/B08WRBG3XW/ref=ppx_yo_dt_b_asin_title_o05_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=b36f8d760497b5c17a26bd17294e12f4&camp=3638&creative=24630">
 			<img src="imgs/71eVAHH3tsL._SX679_.jpg" width="350" height="350">
 			<p id="title">
-				boAt Type C A325 Tangle-free, Sturdy Type C Cable with 3A Rapid Charging & 480mbps Data Transmission(Black)
+				boAt Type C A325 Tangle-free, Sturdy Type C Cable
 			</p>
 			
 		</a>
@@ -71,7 +71,7 @@
 		<a href="https://www.amazon.in/gp/product/B09QC58SV6/ref=ppx_yo_dt_b_asin_image_o00_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=2f24653f539629c7eb9493ec6efd6ce9&camp=3638&creative=24630">
 			<img src="imgs/41UOFNDyU3L._SY300_SX300_.jpg" width="350" height="350">
 			<p id="title">
-				FSFTTRAD Garden Pruning Shears tree cutter Flexible Branch Cutter Steel Blade Hand Pruner (Black)
+				FSFTTRAD Garden Pruning Shears tree cutter
 			</p>
 			
 		</a>
