--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
         <div class="flex-item">
 	
 	<p>
+		<a href="https://www.amazon.in/tryprime?tag=gameiplay-21">
+			<img src="imgs/IN-PRIME-1068x260.jpg" width="350" height="350">
+			<p id="title">
+				Amazon Prime
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
 		<a href="https://www.amazon.in/gp/product/812231354X/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=721acd6530a3a5444a695e39f3f6f59f&camp=3638&creative=24630">
 			<img src="imgs/51kcA5D1dQL._SX384_BO1,204,203,200_.jpg" width="350" height="350">
 			<p id="title">
