Bounty as banner

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<a href="https://www.amazon.in/tryprime?tag=gameiplay-21">
 			<img src="imgs/IN-PRIME-1068x260.jpg" width="350" height="350">
 			<p id="title">
-				Amazon Prime
+				Latest Bollywood blockbusters, thousands of movies and TV shows, Unlimited FREE 1 day and 2 days shipping, Exclusive shopping deals & selection, Ad-free music & more.
 			</p>
 			
 		</a>
