--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h1 div="main">Game I Play</h1> <h2 div="shop" >... and Shop</h2>
 		<p>
 		<a href="https://www.amazon.in/tryprime?tag=gameiplay-21">
-			<img src="imgs/IN-PRIME-1068x260.jpg" width="350" height="350">
-			<p id="title">
-				Latest Bollywood blockbusters, thousands of movies and TV shows, Unlimited FREE 1 day and 2 days shipping, Exclusive shopping deals & selection, Ad-free music & more.
+			<img src="imgs/IN-PRIME-1068x260.jpg" width="1068" height="260">
+			<p id="bounty">
+				Amazon Prime for Exclusive shopping deals & selection, Ad-free music & more.
 			</p>
 			
 		</a>
