updated index html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,138 @@
         <div class="flex-item">
 	
 	<p>
+		<a href="https://www.amazon.in/Biotique-Bio-Herbcolor-Darkest-Brown/dp/B07X6MKT5N/ref=sr_1_1?keywords=biotique+bio+herbcolor+conditioning+hair+color+dark+brown&amp;qid=1678020046&amp;refinements=p_89%253ABiotique&amp;rnid=3837712031&amp;s=beauty&amp;sprefix=biotique+bio+her%252Cbeauty%252C449&amp;sr=1-1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=56864035bc3ada20f7ab47386d92ddb7&camp=3638&creative=24630">
+			<img src="imgs/61DwNdHQhyL._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				Biotique Bio Herbcolor Conditioning Hair Color
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Raaga-Professional-Kojic-Milk-Radiant/dp/B00WHQTLLE/ref=sr_1_2?crid=3E9XWJZ6S6E4I&amp;keywords=raaga+professional+de+tan&amp;qid=1678019837&amp;s=beauty&amp;sprefix=raaga+professional+de+tan+%252Cbeauty%252C226&amp;sr=1-2&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=3e0fa270f78093ba4ef37f46d7c4de37&camp=3638&creative=24630">
+			<img src="imgs/410GhUeNDiL.jpg" width="350" height="350">
+			<p id="title">
+				Raaga Professional De-Tan
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Absolute-Perfect-Radiance-Lightening-Product/dp/B071KNGW25/ref=sr_1_12?keywords=lakme+absolute+perfect+radiance&amp;qid=1678019678&amp;refinements=p_89%253ALakme&amp;rnid=3837712031&amp;s=beauty&amp;sprefix=lakme+A%252Caps%252C547&amp;sr=1-12&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=17e15f51575f04307ca38c162aa1b5cc&camp=3638&creative=24630">
+			<img src="imgs/51c4amfvZEL._SY879_.jpg" width="350" height="350">
+			<p id="title">
+				Lakmé Absolute Perfect Radiance Skin<br>Lightening Light Cream with<br> Ayur Product, 50g
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Garnier-Bright-Complete-VITAMIN-YOGHURT/dp/B0969Y98GK/ref=sr_1_1_sspa?keywords=garnier+skin+naturals+night+cream&amp;qid=1678019565&amp;sprefix=garnier+skin+naturals+%252Caps%252C226&amp;sr=8-1-spons&amp;sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=c64417e49fbadd8a448a137750442646&camp=3638&creative=24630">
+			<img src="imgs/61LRX03zSaL._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				Garnier Skin Naturals, Night Cream, Anti-Dark Spots
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Cheryls-Cosmeceuticals-SensiGlow-Irritant-Sensitive/dp/B095XRTM43/ref=sr_1_5?crid=1IFU5LNYBN0Y&amp;keywords=Cheryl%2527s+Cosmeceuticals+SensiGlow&amp;qid=1678019405&amp;sprefix=cheryl+s+cosmeceuticals+sensiglow%252Caps%252C229&amp;sr=8-5&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=00fb8968f532728dca2eb0cff99a5dbd&camp=3638&creative=24630">
+			<img src="imgs/81kO7CYemPS._SX522_.jpg" width="350" height="350">
+			<p id="title">
+				Cheryl's Cosmeceuticals SensiGlow
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Maybelline-Alia-Loves-York-Highline/dp/B07BXPN7KR/ref=sr_1_7?crid=215885REOV2A2&amp;keywords=maybelline+lipstick+new+york+balm&amp;qid=1678019026&amp;s=beauty&amp;sprefix=maybelline+lipstick+new+york+balm%252Cbeauty%252C215&amp;sr=1-7&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=2c56f6ad9ad4d088af8268f8fc4c1b7c&camp=3638&creative=24630">
+			<img src="imgs/61y11J0WHCL._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				Maybelline New York Baby Lips Balm, Highline Wine
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Kesh-King-Ayurvedic-Hairfall-Anti-Hairfall/dp/B08LGZVXR3/ref=sr_1_6?keywords=kesh+king+oil&amp;qid=1678018522&amp;s=beauty&amp;sprefix=Kess+King+Oil%252Cbeauty%252C199&amp;sr=1-6&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=4f2e1c08691155d627592f6908efad29&camp=3638&creative=24630">
+			<img src="imgs/81Dqnoh2S7L._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				Kesh King Ayurvedic Anti Hairfall Hair Oil 300ml <br>& Anti-Hairfall Shampoo, 600 ml
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Kesh-King-Ayurvedic-Scalp-Hair/dp/B07K2JHVRY/ref=sr_1_5?keywords=kesh+king+oil&amp;qid=1678018522&amp;s=beauty&amp;sprefix=Kess+King+Oil%252Cbeauty%252C199&amp;sr=1-5&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=a8e0ef9118b4a5e23db5c668dddcf5ed&camp=3638&creative=24630">
+			<img src="imgs/71aiqTDRNGL._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				Kesh King Ayurvedic Anti Hairfall Hair Oil
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Indulekha-Bhringa-Hair-Oil-100ml/dp/B00S850C5C/ref=sr_1_1_sspa?crid=1HFFBU7EY21Z3&amp;keywords=Kegs%252BKing%252BOil&amp;qid=1678018125&amp;s=beauty&amp;sprefix=kegs%252Bking%252Boil%252Cbeauty%252C481&amp;sr=1-1-spons&amp;sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&amp;th=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=05c4c33a844b2873400e7436643e4fd4&camp=3638&creative=24630">
+			<img src="imgs/61ScSAfkDSL._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				Indulekha Bringha Ayurvedic Hair Oil 100 ml
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/LOr%25C3%25A9al-Professionnel-Revival-Shampoo-Conditioner/dp/B099FG63Y3/ref=sr_1_6?keywords=L%25E2%2580%2599Or%25C3%25A9al+Paris+Spa+Shampoo+and+Conditioner&amp;qid=1678017878&amp;s=beauty&amp;sr=1-6&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=f19fcba616e2f36517acfd3fc8179a78&camp=3638&creative=24630">
+			<img src="imgs/71cYS32jadL._SY679_.jpg" width="350" height="350">
+			<p id="title">
+				L’Oréal Paris Spa Shampoo and Conditioner
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/gp/search?ie=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=07d83b007dbcdfb883e00402905f852a&camp=3638&creative=24630&index=aps&keywords=pears">
+			<img src="imgs/41dtn0YEsWL._SX300_SY300_.jpg" width="350" height="350">
+			<p id="title">
+				Search - pears soap large pack
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
 		<a href="https://www.amazon.in/gp/product/812231354X/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=721acd6530a3a5444a695e39f3f6f59f&camp=3638&creative=24630">
 			<img src="imgs/51kcA5D1dQL._SX384_BO1,204,203,200_.jpg" width="350" height="350">
 			<p id="title">
