--- a/index.html
+++ b/index.html
@@ -16,17 +16,29 @@
         </a>
         <h1 div="main">Game I Play</h1> <h2 div="shop" >... and Shop</h2>
 		<p>
-		<a href="https://www.amazon.in/tryprime?tag=gameiplay-21">
-			<img src="imgs/IN-PRIME-1068x260.jpg" width="1068" height="260">
-			<p id="bounty">
-				Amazon Prime for Exclusive shopping deals & selection, Ad-free music & more.
+			<a href="https://www.amazon.in/tryprime?tag=gameiplay-21">
+				<img src="imgs/IN-PRIME-1068x260.jpg" width="1068" height="260">
+				<p id="bounty">
+					Amazon Prime for Exclusive shopping deals & selection, Ad-free music & more.
+				</p>
+				
+			</a>
+		</p>
+    </div>
+    <div class="flex-container">
+        <div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/OPERATION-CHARGING-MULTI-CLIP-FUNCTION-PERSONAL/dp/B08VJFYH6N/ref=pd_ci_mcx_mh_mcx_views_0?pd_rd_w=fIP4P&amp;content-id=amzn1.sym.7938e11a-362b-421f-bd30-8dd8d3c4b65f&amp;pf_rd_p=7938e11a-362b-421f-bd30-8dd8d3c4b65f&amp;pf_rd_r=4PY4RX3X29726WNBTTRT&amp;pd_rd_wg=3qC6b&amp;pd_rd_r=40de043a-18f7-411e-b5c3-22e1d5fd9cc1&amp;pd_rd_i=B08VJFYH6N&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=e465ef6a79d9d88f13c2a778022c6082&camp=3638&creative=24630">
+			<img src="imgs/816lZp-8R2L._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				BAJAJ PYGMY MINI 110 MM 10 W <br>HIGH SPEED OPERATION<br>, USB CHARGING, MULTI-CLIP FUNCTION <br>PERSONAL FAN
 			</p>
 			
 		</a>
 	</p>
-    </div>
-    <div class="flex-container">
-        <div class="flex-item">
+   
+</div><div class="flex-item">
 	
 	<p>
 		<a href="https://www.amazon.in/Biotique-Bio-Herbcolor-Darkest-Brown/dp/B07X6MKT5N/ref=sr_1_1?keywords=biotique+bio+herbcolor+conditioning+hair+color+dark+brown&amp;qid=1678020046&amp;refinements=p_89%253ABiotique&amp;rnid=3837712031&amp;s=beauty&amp;sprefix=biotique+bio+her%252Cbeauty%252C449&amp;sr=1-1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=56864035bc3ada20f7ab47386d92ddb7&camp=3638&creative=24630">
