--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 		<a href="https://www.amazon.in/gp/product/812231354X/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=721acd6530a3a5444a695e39f3f6f59f&camp=3638&creative=24630">
 			<img src="imgs/51kcA5D1dQL._SX384_BO1,204,203,200_.jpg" width="350" height="350">
 			<p id="title">
-				Children Knowledge Bank : A Tonic For Your Child's Brain
+				Children Knowledge Bank : <br>A Tonic For Your Child's Brain
 			</p>
 			
 		</a>
@@ -188,7 +188,7 @@
 		<a href="https://www.amazon.in/gp/product/B0BDS8MY8J/ref=ppx_yo_dt_b_asin_title_o04_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=bc00c4b91ee86769fe5fdb49c4279835&camp=3638&creative=24630">
 			<img src="imgs/717wlP-z1ZL._SX679_.jpg" width="350" height="350">
 			<p id="title">
-				Lapster Caddy for ssd and HDD, Optical Bay 2nd Hard Drive Caddy
+				Lapster Caddy for ssd and HDD, <br>Optical Bay 2nd Hard Drive Caddy
 			</p>
 			
 		</a>
@@ -260,7 +260,7 @@
 		<a href="https://www.amazon.in/gp/product/B0758JGNHL/ref=ppx_yo_dt_b_asin_image_o09_s00?ie=UTF8&amp;th=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=4b47a1d31b6984c4aef7b8769f2c6033&camp=3638&creative=24630">
 			<img src="imgs/Happilo All Natural Unsweetened Peanut Butter Creamy 1Kg.jpg" width="350" height="350">
 			<p id="title">
-				Happilo All Natural Unsweetened Peanut Butter Creamy 1Kg
+				Happilo All Natural Unsweetened <br>Peanut Butter Creamy 1Kg
 			</p>
 			
 		</a>
@@ -272,7 +272,7 @@
 		<a href="https://www.amazon.in/gp/product/B07KT9Q54M/ref=ppx_yo_dt_b_asin_image_o08_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=ccad7f4af3078f372ac8ed08e45201ac&camp=3638&creative=24630">
 			<img src="imgs/Shalimar Premium OXO - Biodegradable Garbage Bags (Medium).jpg" width="350" height="350">
 			<p id="title">
-				Shalimar Premium OXO - Biodegradable Garbage Bags (Medium)
+				Shalimar Premium OXO - <br>Biodegradable Garbage Bags (Medium)
 			</p>
 			
 		</a>
