--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             </svg>
         </a>
         <h1 div="main">Game I Play</h1> <h2 div="shop" >... and Shop</h2>
-		<p>
+		<div class="banner">
+			
 			<a href="https://www.amazon.in/tryprime?tag=gameiplay-21">
 				<img src="imgs/IN-PRIME-1068x260.jpg" width="1068" height="260">
 				<p id="bounty">
@@ -23,10 +24,47 @@
 				</p>
 				
 			</a>
-		</p>
+			
+	    </div>
     </div>
     <div class="flex-container">
         <div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/boAt-Wave-Call-Dedicated-Multi-Sport/dp/B0B5B6PQCT/ref=sr_1_3?crid=13I02LCEFAEZ1&amp;keywords=electronics&amp;psr=EY17&amp;qid=1678165166&amp;s=todays-deals&amp;sprefix=electornicw%252Ctodays-deals%252C245&amp;sr=1-3&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=c1fffa9e70f7d1f60a665ff384883523&camp=3638&creative=24630">
+			<img src="imgs/614AipEWSIL._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				boAt Wave Call Smart Watch, Smart Talk
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Lloyd-Inverter-Convertible-Anti-Viral-GLS09I3FWSEV/dp/B0BRKWNBFZ?ref_=Oct_DLandingS_D_ca212838_64&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=89306e9a0d033a6118ef889f94eea1c9&camp=3638&creative=24630">
+			<img src="imgs/31TgiGf9uML._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				Lloyd 0.8 Ton 3 Star Inverter Split AC <br>(5 in 1 Convertible, Copper, Anti-Viral + <br>PM 2.5 Filter, 2023 Model, <br>White with Silver Deco Strip, GLS09I3FWSEV)
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/dp/B01DPL9B00/ref=s9_acsd_al_bw_c2_x_1_i?pf_rd_m=A1K21FY43GMZF8&amp;pf_rd_s=merchandised-search-10&amp;pf_rd_r=C0WSRDHVG5M11174BCSC&amp;pf_rd_t=101&amp;pf_rd_p=a49da695-5bfc-49eb-af17-d53812cbf5a4&amp;pf_rd_i=4951860031&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=9dbb8d8489e18da1dc62168164800f0a&camp=3638&creative=24630">
+			<img src="imgs/51VBo2iDGxL._SX679_.jpg" width="350" height="350">
+			<p id="title">
+				Crompton Ozone Desert Air Cooler- 75L
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
 	
 	<p>
 		<a href="https://www.amazon.in/OPERATION-CHARGING-MULTI-CLIP-FUNCTION-PERSONAL/dp/B08VJFYH6N/ref=pd_ci_mcx_mh_mcx_views_0?pd_rd_w=fIP4P&amp;content-id=amzn1.sym.7938e11a-362b-421f-bd30-8dd8d3c4b65f&amp;pf_rd_p=7938e11a-362b-421f-bd30-8dd8d3c4b65f&amp;pf_rd_r=4PY4RX3X29726WNBTTRT&amp;pd_rd_wg=3qC6b&amp;pd_rd_r=40de043a-18f7-411e-b5c3-22e1d5fd9cc1&amp;pd_rd_i=B08VJFYH6N&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=e465ef6a79d9d88f13c2a778022c6082&camp=3638&creative=24630">
