--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="https://github.com/aditya2104/ShoppingWebsite/blob/main/README.md" target="_blank">
                 <i class="fa fa-github" style="font-size:36px"></i>
             </a>
-			<!-- <p id="dis">This is a POC for building a website using UiPath Bot. However the links are working and would direct you to the corresponding Amazon page. Click in GitHub Icon to read more about the POC.</p>-->
+			<p id="dis">This is a POC for building a website using UiPath Bot. However the links are working and would direct you to the corresponding Amazon page. Click in GitHub Icon to read more about the POC.</p>
         <h1 div="main">Game I Play</h1> <h2 div="shop" >... and Shop</h2>
 		<div class="banner">
 			
