--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="header">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-            <a href="https://github.com/aditya2104/ShoppingWebsite/blob/main/README.md" target="_blank">
+<!--             <a href="https://github.com/aditya2104/ShoppingWebsite/blob/main/README.md" target="_blank">
                 <i class="fa fa-github" style="font-size:36px"></i>
-            </a>
+            </a> -->
 <!-- 			<p id="dis">This is a POC for building a website using UiPath Bot. However the links are working and would direct you to the corresponding Amazon page. Click in GitHub Icon to read more about the POC.</p> -->
         <h1 div="main">Game I Play</h1> <h2 div="shop" >... and Shop</h2>
 		<div class="banner">
