--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 	
 	<p>
 		<a href="https://www.amazon.in/Motorola-Meteorite-Mediatek-Processor-Camera/dp/B0BTJ1KSS1/ref=sr_1_4?crid=3IQQ36FBQRYAM&amp;keywords=Moto+G+31&amp;qid=1677918097&amp;s=electronics&amp;sprefix=moto+g+31%252Celectronics%252C222&amp;sr=1-4&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=3a3252fa897b2483e5ce6bc0d0bf74f1&camp=3638&creative=24630">
-			<img src="imgs/31uYjE0+NeL.jpg" width="350" height="350">
+			<img src="imgs/31uYjE0NeL.jpg" width="350" height="350">
 			<p id="title">
 				Motorola g31 (Meteorite Grey, 128 GB) (6 GB RAM)
 			</p>
