--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="description" content="Shopping website for Amazon products.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +11,10 @@
 <body>
     <div class="header">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!--             <a href="https://github.com/aditya2104/ShoppingWebsite/blob/main/README.md" target="_blank">
+            <! -- <a href="https://github.com/aditya2104/ShoppingWebsite/blob/main/README.md" target="_blank">
                 <i class="fa fa-github" style="font-size:36px"></i>
-            </a> -->
-<!-- 			<p id="dis">This is a POC for building a website using UiPath Bot. However the links are working and would direct you to the corresponding Amazon page. Click in GitHub Icon to read more about the POC.</p> -->
+            </a>
+			 <p id="dis">This is a POC for building a website using UiPath Bot. However the links are working and would direct you to the corresponding Amazon page. Click in GitHub Icon to read more about the POC.</p> -->
         <h1 div="main">Game I Play</h1> <h2 div="shop" >... and Shop</h2>
 		<div class="banner">
 			
@@ -236,7 +237,7 @@
 	
 	<p>
 		<a href="https://www.amazon.in/Motorola-Meteorite-Mediatek-Processor-Camera/dp/B0BTJ1KSS1/ref=sr_1_4?crid=3IQQ36FBQRYAM&amp;keywords=Moto+G+31&amp;qid=1677918097&amp;s=electronics&amp;sprefix=moto+g+31%252Celectronics%252C222&amp;sr=1-4&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=3a3252fa897b2483e5ce6bc0d0bf74f1&camp=3638&creative=24630">
-			<img src="imgs/31uYjE0+NeL.jpg" width="350" height="350">
+			<img src="imgs/31uYjE0NeL.jpg" width="350" height="350">
 			<p id="title">
 				Motorola g31 (Meteorite Grey, 128 GB) (6 GB RAM)
 			</p>
