--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/boAt-Wave-Call-Dedicated-Multi-Sport/dp/B0B5B6PQCT/ref=sr_1_3?crid=13I02LCEFAEZ1&amp;keywords=electronics&amp;psr=EY17&amp;qid=1678165166&amp;s=todays-deals&amp;sprefix=electornicw%252Ctodays-deals%252C245&amp;sr=1-3&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=c1fffa9e70f7d1f60a665ff384883523&camp=3638&creative=24630">
+		<a href="https://amzn.to/41Vi3LT">
 			<img src="imgs/614AipEWSIL._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				boAt Wave Call Smart Watch, Smart Talk
@@ -44,7 +44,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Lloyd-Inverter-Convertible-Anti-Viral-GLS09I3FWSEV/dp/B0BRKWNBFZ?ref_=Oct_DLandingS_D_ca212838_64&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=89306e9a0d033a6118ef889f94eea1c9&camp=3638&creative=24630">
+		<a href="https://amzn.to/3L9c3co">
 			<img src="imgs/31TgiGf9uML._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				Lloyd 0.8 Ton 3 Star Inverter Split AC <br>(5 in 1 Convertible, Copper, Anti-Viral + <br>PM 2.5 Filter, 2023 Model, <br>White with Silver Deco Strip, GLS09I3FWSEV)
@@ -56,7 +56,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/dp/B01DPL9B00/ref=s9_acsd_al_bw_c2_x_1_i?pf_rd_m=A1K21FY43GMZF8&amp;pf_rd_s=merchandised-search-10&amp;pf_rd_r=C0WSRDHVG5M11174BCSC&amp;pf_rd_t=101&amp;pf_rd_p=a49da695-5bfc-49eb-af17-d53812cbf5a4&amp;pf_rd_i=4951860031&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=9dbb8d8489e18da1dc62168164800f0a&camp=3638&creative=24630">
+		<a href="https://amzn.to/3YANuYW">
 			<img src="imgs/51VBo2iDGxL._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				Crompton Ozone Desert Air Cooler- 75L
@@ -68,7 +68,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/OPERATION-CHARGING-MULTI-CLIP-FUNCTION-PERSONAL/dp/B08VJFYH6N/ref=pd_ci_mcx_mh_mcx_views_0?pd_rd_w=fIP4P&amp;content-id=amzn1.sym.7938e11a-362b-421f-bd30-8dd8d3c4b65f&amp;pf_rd_p=7938e11a-362b-421f-bd30-8dd8d3c4b65f&amp;pf_rd_r=4PY4RX3X29726WNBTTRT&amp;pd_rd_wg=3qC6b&amp;pd_rd_r=40de043a-18f7-411e-b5c3-22e1d5fd9cc1&amp;pd_rd_i=B08VJFYH6N&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=e465ef6a79d9d88f13c2a778022c6082&camp=3638&creative=24630">
+		<a href="https://amzn.to/3LdxHwf">
 			<img src="imgs/816lZp-8R2L._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				BAJAJ PYGMY MINI 110 MM 10 W <br>HIGH SPEED OPERATION<br>, USB CHARGING, MULTI-CLIP FUNCTION <br>PERSONAL FAN
@@ -80,7 +80,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Biotique-Bio-Herbcolor-Darkest-Brown/dp/B07X6MKT5N/ref=sr_1_1?keywords=biotique+bio+herbcolor+conditioning+hair+color+dark+brown&amp;qid=1678020046&amp;refinements=p_89%253ABiotique&amp;rnid=3837712031&amp;s=beauty&amp;sprefix=biotique+bio+her%252Cbeauty%252C449&amp;sr=1-1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=56864035bc3ada20f7ab47386d92ddb7&camp=3638&creative=24630">
+		<a href="https://amzn.to/3L9zkuL">
 			<img src="imgs/61DwNdHQhyL._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				Biotique Bio Herbcolor Conditioning Hair Color
@@ -92,7 +92,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Raaga-Professional-Kojic-Milk-Radiant/dp/B00WHQTLLE/ref=sr_1_2?crid=3E9XWJZ6S6E4I&amp;keywords=raaga+professional+de+tan&amp;qid=1678019837&amp;s=beauty&amp;sprefix=raaga+professional+de+tan+%252Cbeauty%252C226&amp;sr=1-2&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=3e0fa270f78093ba4ef37f46d7c4de37&camp=3638&creative=24630">
+		<a href="https://amzn.to/4225rD0">
 			<img src="imgs/410GhUeNDiL.jpg" width="350" height="350">
 			<p id="title">
 				Raaga Professional De-Tan
@@ -104,7 +104,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Absolute-Perfect-Radiance-Lightening-Product/dp/B071KNGW25/ref=sr_1_12?keywords=lakme+absolute+perfect+radiance&amp;qid=1678019678&amp;refinements=p_89%253ALakme&amp;rnid=3837712031&amp;s=beauty&amp;sprefix=lakme+A%252Caps%252C547&amp;sr=1-12&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=17e15f51575f04307ca38c162aa1b5cc&camp=3638&creative=24630">
+		<a href="https://amzn.to/3Zx8v8s">
 			<img src="imgs/51c4amfvZEL._SY879_.jpg" width="350" height="350">
 			<p id="title">
 				Lakmé Absolute Perfect Radiance Skin<br>Lightening Light Cream with<br> Ayur Product, 50g
@@ -116,7 +116,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Garnier-Bright-Complete-VITAMIN-YOGHURT/dp/B0969Y98GK/ref=sr_1_1_sspa?keywords=garnier+skin+naturals+night+cream&amp;qid=1678019565&amp;sprefix=garnier+skin+naturals+%252Caps%252C226&amp;sr=8-1-spons&amp;sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=c64417e49fbadd8a448a137750442646&camp=3638&creative=24630">
+		<a href="https://amzn.to/3J2BUQL">
 			<img src="imgs/61LRX03zSaL._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				Garnier Skin Naturals, Night Cream, Anti-Dark Spots
@@ -128,7 +128,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Cheryls-Cosmeceuticals-SensiGlow-Irritant-Sensitive/dp/B095XRTM43/ref=sr_1_5?crid=1IFU5LNYBN0Y&amp;keywords=Cheryl%2527s+Cosmeceuticals+SensiGlow&amp;qid=1678019405&amp;sprefix=cheryl+s+cosmeceuticals+sensiglow%252Caps%252C229&amp;sr=8-5&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=00fb8968f532728dca2eb0cff99a5dbd&camp=3638&creative=24630">
+		<a href="https://amzn.to/3ZwtV5F">
 			<img src="imgs/81kO7CYemPS._SX522_.jpg" width="350" height="350">
 			<p id="title">
 				Cheryl's Cosmeceuticals SensiGlow
@@ -140,7 +140,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Maybelline-Alia-Loves-York-Highline/dp/B07BXPN7KR/ref=sr_1_7?crid=215885REOV2A2&amp;keywords=maybelline+lipstick+new+york+balm&amp;qid=1678019026&amp;s=beauty&amp;sprefix=maybelline+lipstick+new+york+balm%252Cbeauty%252C215&amp;sr=1-7&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=2c56f6ad9ad4d088af8268f8fc4c1b7c&camp=3638&creative=24630">
+		<a href="https://amzn.to/3Jqtwfj">
 			<img src="imgs/61y11J0WHCL._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				Maybelline New York Baby Lips Balm, Highline Wine
@@ -152,7 +152,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Kesh-King-Ayurvedic-Hairfall-Anti-Hairfall/dp/B08LGZVXR3/ref=sr_1_6?keywords=kesh+king+oil&amp;qid=1678018522&amp;s=beauty&amp;sprefix=Kess+King+Oil%252Cbeauty%252C199&amp;sr=1-6&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=4f2e1c08691155d627592f6908efad29&camp=3638&creative=24630">
+		<a href="https://amzn.to/3YOhjWp">
 			<img src="imgs/81Dqnoh2S7L._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				Kesh King Ayurvedic Anti Hairfall Hair Oil 300ml <br>& Anti-Hairfall Shampoo, 600 ml
@@ -164,7 +164,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Kesh-King-Ayurvedic-Scalp-Hair/dp/B07K2JHVRY/ref=sr_1_5?keywords=kesh+king+oil&amp;qid=1678018522&amp;s=beauty&amp;sprefix=Kess+King+Oil%252Cbeauty%252C199&amp;sr=1-5&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=a8e0ef9118b4a5e23db5c668dddcf5ed&camp=3638&creative=24630">
+		<a href="https://amzn.to/3YOhjWp">
 			<img src="imgs/71aiqTDRNGL._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				Kesh King Ayurvedic Anti Hairfall Hair Oil
@@ -176,7 +176,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Indulekha-Bhringa-Hair-Oil-100ml/dp/B00S850C5C/ref=sr_1_1_sspa?crid=1HFFBU7EY21Z3&amp;keywords=Kegs%252BKing%252BOil&amp;qid=1678018125&amp;s=beauty&amp;sprefix=kegs%252Bking%252Boil%252Cbeauty%252C481&amp;sr=1-1-spons&amp;sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&amp;th=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=05c4c33a844b2873400e7436643e4fd4&camp=3638&creative=24630">
+		<a href="https://amzn.to/3JrJiGK">
 			<img src="imgs/61ScSAfkDSL._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				Indulekha Bringha Ayurvedic Hair Oil 100 ml
@@ -188,7 +188,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/LOr%25C3%25A9al-Professionnel-Revival-Shampoo-Conditioner/dp/B099FG63Y3/ref=sr_1_6?keywords=L%25E2%2580%2599Or%25C3%25A9al+Paris+Spa+Shampoo+and+Conditioner&amp;qid=1678017878&amp;s=beauty&amp;sr=1-6&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=f19fcba616e2f36517acfd3fc8179a78&camp=3638&creative=24630">
+		<a href="https://amzn.to/3l09qPI">
 			<img src="imgs/71cYS32jadL._SY679_.jpg" width="350" height="350">
 			<p id="title">
 				L’Oréal Paris Spa Shampoo and Conditioner
@@ -200,7 +200,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/gp/search?ie=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=07d83b007dbcdfb883e00402905f852a&camp=3638&creative=24630&index=aps&keywords=pears">
+		<a href="https://amzn.to/3ymx247">
 			<img src="imgs/41dtn0YEsWL._SX300_SY300_.jpg" width="350" height="350">
 			<p id="title">
 				Search - pears soap large pack
@@ -212,7 +212,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/gp/product/812231354X/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=721acd6530a3a5444a695e39f3f6f59f&camp=3638&creative=24630">
+		<a href="https://amzn.to/41XxTFS">
 			<img src="imgs/51kcA5D1dQL._SX384_BO1,204,203,200_.jpg" width="350" height="350">
 			<p id="title">
 				Children Knowledge Bank : <br>A Tonic For Your Child's Brain
@@ -224,7 +224,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/gp/product/B0BDS8MY8J/ref=ppx_yo_dt_b_asin_title_o04_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=bc00c4b91ee86769fe5fdb49c4279835&camp=3638&creative=24630">
+		<a href="https://amzn.to/3YykHnW">
 			<img src="imgs/717wlP-z1ZL._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				Lapster Caddy for ssd and HDD, <br>Optical Bay 2nd Hard Drive Caddy
@@ -236,7 +236,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Motorola-Meteorite-Mediatek-Processor-Camera/dp/B0BTJ1KSS1/ref=sr_1_4?crid=3IQQ36FBQRYAM&amp;keywords=Moto+G+31&amp;qid=1677918097&amp;s=electronics&amp;sprefix=moto+g+31%252Celectronics%252C222&amp;sr=1-4&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=3a3252fa897b2483e5ce6bc0d0bf74f1&camp=3638&creative=24630">
+		<a href="https://amzn.to/3LrwIcb">
 			<img src="imgs/31uYjE0NeL.jpg" width="350" height="350">
 			<p id="title">
 				Motorola g31 (Meteorite Grey, 128 GB) (6 GB RAM)
@@ -248,7 +248,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/gp/product/B08WRBG3XW/ref=ppx_yo_dt_b_asin_title_o05_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=b36f8d760497b5c17a26bd17294e12f4&camp=3638&creative=24630">
+		<a href="https://amzn.to/3ZVse14">
 			<img src="imgs/71eVAHH3tsL._SX679_.jpg" width="350" height="350">
 			<p id="title">
 				boAt Type C A325 Tangle-free, Sturdy Type C Cable
@@ -260,7 +260,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/gp/product/B09QC58SV6/ref=ppx_yo_dt_b_asin_image_o00_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=2f24653f539629c7eb9493ec6efd6ce9&camp=3638&creative=24630">
+		<a href="https://amzn.to/3l7qSlb">
 			<img src="imgs/41UOFNDyU3L._SY300_SX300_.jpg" width="350" height="350">
 			<p id="title">
 				FSFTTRAD Garden Pruning Shears tree cutter
@@ -272,7 +272,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/gp/search?ie=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=b91f198a46ea124ac3e797adc3b11494&camp=3638&creative=24630&index=eu-ce-in&keywords=camera">
+		<a href="https://amzn.to/3J0pmtb">
 			<img src="imgs/613qOogqnzL._AC_UY218_.jpg" width="350" height="350">
 			<p id="title">
 				Search for - Secret Camera
@@ -284,7 +284,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/dp/B0BG1PN3H7?ref_=cm_sw_r_apan_dp_BXZBWWM0CVSPCVCV0D1Y&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=4db7d81e18256f6d1d67651f2350b302&camp=3638&creative=24630">
+		<a href="https://amzn.to/3T36o9J">
 			<img src="imgs/realme narzo 50A Prime.jpg" width="350" height="350">
 			<p id="title">
 				realme narzo 50A Prime
@@ -296,7 +296,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/gp/product/B0758JGNHL/ref=ppx_yo_dt_b_asin_image_o09_s00?ie=UTF8&amp;th=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=4b47a1d31b6984c4aef7b8769f2c6033&camp=3638&creative=24630">
+		<a href="https://amzn.to/3ZLiyqg">
 			<img src="imgs/Happilo All Natural Unsweetened Peanut Butter Creamy 1Kg.jpg" width="350" height="350">
 			<p id="title">
 				Happilo All Natural Unsweetened <br>Peanut Butter Creamy 1Kg
@@ -308,7 +308,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/gp/product/B07KT9Q54M/ref=ppx_yo_dt_b_asin_image_o08_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=ccad7f4af3078f372ac8ed08e45201ac&camp=3638&creative=24630">
+		<a href="https://amzn.to/3kXe54M">
 			<img src="imgs/Shalimar Premium OXO - Biodegradable Garbage Bags (Medium).jpg" width="350" height="350">
 			<p id="title">
 				Shalimar Premium OXO - <br>Biodegradable Garbage Bags (Medium)
@@ -320,7 +320,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/gp/product/B09RFDQVJD/ref=ppx_yo_dt_b_asin_image_o04_s00?ie=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=a21c1bd515a7064788198289c56ebee1&camp=3638&creative=24630">
+		<a href="https://amzn.to/3Zzz3pA">
 			<img src="imgs/Nilkamal STL22 Plastic Stool.jpg" width="350" height="350">
 			<p id="title">
 				Nilkamal STL22 Plastic Stool
@@ -332,7 +332,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/dp/B0BNBSJRPZ/ref=twister_B0BRKNKCH3?_encoding=UTF8&amp;psc=1&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=9aa9bf54c63e9aa209134a8ee7298e3f&camp=3638&creative=24630">
+		<a href="https://amzn.to/3l5hBtR">
 			<img src="imgs/Samsung Galaxy A04e.jpg" width="350" height="350">
 			<p id="title">
 				Samsung Galaxy A04e
@@ -344,7 +344,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/ADDMAX-Extension-Cord-Port-Multi-Protection/dp/B083M1D7HW/?_encoding=UTF8&amp;pd_rd_w=cvylp&amp;content-id=amzn1.sym.730090a5-d1cb-4d65-a97c-9881819a53f1&amp;pf_rd_p=730090a5-d1cb-4d65-a97c-9881819a53f1&amp;pf_rd_r=1YF56DJCMRD33RQ3ZT22&amp;pd_rd_wg=XkuCG&amp;pd_rd_r=c0a3385e-f673-44b2-86b7-812168f489c6&amp;ref_=pd_gw_ci_mcx_mr_hp_atf_m&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=ead835c579e15eefde23eaefaa319b97&camp=3638&creative=24630">
+		<a href="https://amzn.to/3T35Y39">
 			<img src="imgs/ADDMAX Extension Cord_1.jpg" width="350" height="350">
 			<p id="title">
 				ADDMAX Extension Cord
@@ -356,7 +356,7 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://www.amazon.in/Grayanotoxin-Rhododendron-East-West-Herbal/dp/B08MWQJJ77/ref=sr_1_5?crid=6L1OLIT0CQPC&amp;keywords=mad+honey&amp;qid=1677475235&amp;sprefix=mad+%252Caps%252C1085&amp;sr=8-5&_encoding=UTF8&tag=gameiplay-21&linkCode=ur2&linkId=c751517c08be4145943a6daee2638e2c&camp=3638&creative=24630">
+		<a href="https://amzn.to/3YACKKm">
 			<img src="imgs/mad_honey_1.jpg" width="350" height="350">
 			<p id="title">
 				Mad Honey
